# buurt-check

./: .env.local  .gitignore  CLAUDE.md  CUsersmilosAppDataLocalTempclaudeD--buurt-checkcad93000-588c-4828-b2ef-cd66d7b379dfscratchpadvbo_cql.json
.claude/: settings.local.json
backend/: .gitignore  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: address.py  router.py
backend/app/cache/: redis.py
backend/app/models/: address.py  building.py  neighborhood.py  neighborhood3d.py  risk.py
backend/app/services/: bag.py  cbs.py  locatieserver.py  offline_store.py  risk_cards.py  three_d_bag.py
backend/scripts/: calibration_check.py  ingest_rivm.py
backend/tests/: test_address_api.py  test_bag.py  test_cache.py  test_cbs.py  test_cbs_live.py  test_locatieserver.py  test_models.py  test_risk_cards.py  test_risk_cards_live.py  test_three_d_bag.py
docs/: claude-code-loop-windows-guide.md  guide.txt  prd.md
docs/plans/: 2026-02-04-f2-live-reliability.md  2026-02-05-f3-risk-cards-hardening.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css
frontend/src/components/: AddressSearch.css  AddressSearch.test.tsx  AddressSearch.tsx  BuildingFactsCard.css  BuildingFactsCard.test.tsx  BuildingFactsCard.tsx  BuildingFootprintMap.css  BuildingFootprintMap.tsx  LanguageToggle.css  (+22 more)
scripts/compound/: analyze-report.ps1  auto-compound.ps1  daily-compound-review.ps1  loop.ps1  prevent-sleep.ps1  register-tasks.ps1  status.ps1
tasks/: task.txt  todo.md
(+11 files in other folders)
